# Prototype

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Prototype.md  PrototypeVision.md  README.md  TESTING.md  TODO.md  USAGE.md  main.py  openapi.json  pyproject.toml
.omx/context/: thesis-prototype-article-audit-20260415T112024Z.md
.omx/interviews/: thesis-prototype-article-audit-20260415T114757Z.md
.omx/plans/: prd-thesis-prototype-article-audit.md  test-spec-thesis-prototype-article-audit.md
.omx/reports/: article-audit-report.md  benchmark-tts-latency-2026-04-17.txt  citation-gap-list.md  claim-status-table.md  manual-finalization-checklist.md  master-prompt-article-fix.md  master-prompt-technical-fix.md  metric-status-table.md
.omx/specs/: deep-interview-thesis-prototype-article-audit.md
academic_paper/: article_prose_edit.md  main.tex  main_full.tex  paper.tex  paper_ieee.tex  paper_ieee_full.tex  references.bib
api/: server.py
core/: config.py  job_state.py  logging_config.py
evaluation/: corpus_manifest.csv  paper_charts_run.txt  test_manifest.csv
evaluation/paper_extensions/: qualitative_scene_cases.csv  qualitative_scene_cases.md  scene_selection_ablation_by_content_type.csv  (+4 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
output/: .gitkeep
pipeline/: __init__.py  summary.py  word_grouper.py
scripts/: analyze_scene_selection_ablation.py  bootstrap.ps1  build_paper.ps1  build_youtube_corpus.py  clean_and_rename_corpus.py  export_openapi.py  extract_scene_case_notes.py  fetch_finevideo.py  fill_missing.py  fill_missing_last.py  final_cleanup.py  generate_charts.py  paper_sanity_check.py  pre_submission_check.ps1  verify_environment.py
selected_articles_conference/: MANIFEST.txt  R07_WCAG21_WebContentAccessibilityGuidelines.url  R08_W3CMediaReqs_MediaAccessibilityUserRequirements.url  R09_W3CMediaAccessible_MakingAudioVideoMediaAccessible.url  R18_Natalie2021_CollaborativeSceneDescriptions.url  R19_PySceneDetect_Software.url  analysis_notes.md
static/: index.html
(+70 files in other folders)
