[project]
name = "prototype"
version = "0.1.0"
description = "Video accessibility pipeline with ASR, scene detection, and TTS"
requires-python = ">=3.11"
dependencies = [
    # Core API/runtime
    "fastapi~=0.128.0",
    "uvicorn[standard]~=0.40.0",
    "pydantic~=2.12.0",
    "pydantic-settings~=2.13.0",
    "python-dotenv~=1.2.0",
    # Audio / video pipeline
    "faster-whisper~=1.2.0",
    "nvidia-cublas-cu12~=12.9.1",
    "nvidia-cudnn-cu12~=9.19.0",
    "Pillow~=12.1.0",
    "scenedetect~=0.6.7",
    "opencv-python~=4.13.0",
    # Hosted service integrations
    "google-genai~=1.73.1",
    "google-cloud-texttospeech~=2.34.0",
    "edge-tts~=7.2.0",
]

[project.optional-dependencies]
dev = [
    # Corpus / evaluation workflow
    "datasets~=4.6.0",
    "langdetect~=1.0.9",
    "yt-dlp~=2026.2.21",
    "pandas~=3.0.0",
    "matplotlib~=3.10.0",
    "seaborn~=0.13.0",
    # Test and maintenance tooling
    "pytest~=9.0.0",
    "ruff~=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "pipeline"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "academic_paper",
    "selected_articles_conference",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (includes unused imports F401)
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["core", "pipeline", "api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
